[gd_scene load_steps=7 format=3 uid="uid://btg3qd8eld1mm"]

[ext_resource type="Script" path="res://resources/gardens/garden.gd" id="1_5owem"]
[ext_resource type="Script" path="res://resources/gardens/garden_layout.gd" id="2_8g7o4"]
[ext_resource type="Texture2D" uid="uid://b5kildofgmthb" path="res://assets/gardens/gardens/garden_01_open.png" id="3_p7iv3"]
[ext_resource type="Texture2D" uid="uid://cfkmukbjgra7d" path="res://assets/gardens/flowers/Plant_03_01_Large.png" id="3_qrxjm"]
[ext_resource type="Texture2D" uid="uid://drryj0dlw5amd" path="res://assets/gardens/buttons/lesson_dot_front.png" id="5_bd2im"]

[sub_resource type="Resource" id="Resource_pwltf"]
script = ExtResource("2_8g7o4")
color = 0
flowers_export = Array[Dictionary]([{
"color": 2,
"position": Vector2i(500, 0),
"type": 0
}])
lesson_buttons_export = Array[Dictionary]([{
"path_out_position": Vector2i(0, 0),
"position": Vector2i(0, 0)
}])
is_first_or_last = 1

[node name="Garden" type="Control"]
custom_minimum_size = Vector2(2400, 2.08165e-12)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5owem")
garden_layout = SubResource("Resource_pwltf")

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_p7iv3")
expand_mode = 1

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button1" type="TextureRect" parent="Buttons"]
unique_name_in_owner = true
z_index = 1
layout_mode = 0
offset_left = -75.0
offset_top = -75.0
offset_right = 225.0
offset_bottom = 225.0
texture = ExtResource("5_bd2im")

[node name="MarginContainer" type="MarginContainer" parent="Buttons/Button1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Button" type="TextureRect" parent="Buttons/Button1/MarginContainer"]
unique_name_in_owner = true
modulate = Color(0.113725, 0.0980392, 0.384314, 1)
z_index = 1
layout_mode = 2
texture = ExtResource("5_bd2im")

[node name="LessonLabel1" type="Label" parent="Buttons/Button1"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 110
text = "Ga"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="TextureRect" parent="Buttons"]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 0
offset_left = 500.0
offset_right = 668.0
offset_bottom = 229.0

[node name="MarginContainer" type="MarginContainer" parent="Buttons/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Button" type="TextureRect" parent="Buttons/Button2/MarginContainer"]
modulate = Color(0.113725, 0.0980392, 0.384314, 1)
z_index = 1
layout_mode = 2
texture = ExtResource("5_bd2im")

[node name="LessonLabel2" type="Label" parent="Buttons/Button2"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 110
text = "Ga"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="TextureRect" parent="Buttons"]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 0
offset_left = 500.0
offset_right = 668.0
offset_bottom = 229.0

[node name="MarginContainer" type="MarginContainer" parent="Buttons/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Button" type="TextureRect" parent="Buttons/Button3/MarginContainer"]
modulate = Color(0.113725, 0.0980392, 0.384314, 1)
z_index = 1
layout_mode = 2
texture = ExtResource("5_bd2im")

[node name="LessonLabel3" type="Label" parent="Buttons/Button3"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 110
text = "Ga"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button4" type="TextureRect" parent="Buttons"]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 0
offset_left = 500.0
offset_right = 668.0
offset_bottom = 229.0

[node name="MarginContainer" type="MarginContainer" parent="Buttons/Button4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Button" type="TextureRect" parent="Buttons/Button4/MarginContainer"]
modulate = Color(0.113725, 0.0980392, 0.384314, 1)
z_index = 1
layout_mode = 2
texture = ExtResource("5_bd2im")

[node name="LessonLabel4" type="Label" parent="Buttons/Button4"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 110
text = "Ga"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Flowers" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Flower1" type="TextureRect" parent="Flowers"]
unique_name_in_owner = true
z_index = 2
layout_mode = 0
offset_left = 500.0
offset_right = 1004.0
offset_bottom = 687.0
texture = ExtResource("3_qrxjm")

[node name="Flower2" type="TextureRect" parent="Flowers"]
unique_name_in_owner = true
z_index = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Flower3" type="TextureRect" parent="Flowers"]
unique_name_in_owner = true
z_index = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Flower4" type="TextureRect" parent="Flowers"]
unique_name_in_owner = true
z_index = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Flower5" type="TextureRect" parent="Flowers"]
unique_name_in_owner = true
z_index = 2
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
